@@ -1,3 +1,8 @@
+Tue May 26 12:57:48 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/Compiler.java (writeFile): treat "-"
+	  as stdout.
+
 Tue May 26 12:48:40 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/Compiler.java (dumpAsm): do not
